[package]
name = "rocksdbTest"
version = "0.1.0"
edition = "2021"

[dependencies]
rocksdb = "0.23.0"
serde = { version = "1.0", features = ["derive"] }  # 序列化/反序列化
serde_json = "1.0"  # JSON 支持
prost = "0.12"           # Protobuf 核心库
prost-derive = "0.12"    # 为结构体生成 Protobuf 支持的宏
anyhow = "1.0"           # 简化错误处理

[build-dependencies]
prost-build = "0.12"     # 用于编译 .proto 文件
